# Digital-Scribe

./: PHASE2B_SUMMARY.md  PHASE2C_PLAN.md  PHASE2C_SUMMARY.md  PHASE3_SUMMARY.md  PROGRESS.md  README.md  check_db.py  cli.py  config.py  errors.py  logging_config.py  main.py  models.py  pyproject.toml  spec.md  test_cli.py  test_phase2a.py  test_research.py
agents/: base.py  editor.py  image_gen.py  researcher.py  social_media.py  translator.py  writer.py
api/: main.py
data/: ingest.py  ingest_from_files.py
docs/: ARCHITECTURE.md  USER_GUIDE.md
frontend/: index.html  main.js  style.css
graph/: edges.py  nodes.py  state.py  workflow.py
scripts/: test_rag.py
tests/: test_agents.py  test_api.py  test_exporters.py  test_frontend_api.py  test_quality.py  test_workflow.py
utils/: audit.py  exporters.py  logger.py  output_formatter.py  output_manager.py  progress.py  quality.py  retry.py
vector_stores/: chroma.py
