[project]
name = "content-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.4.1",
    "langchain>=1.2.6",
    "langchain-anthropic>=1.3.1",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.6",
    "python-dotenv>=1.2.1",
]
